--- a/.github/workflows/update_lessons.yml
+++ b/.github/workflows/update_lessons.yml
@@ -2,7 +2,7 @@ name: Update Lessons Daily
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # Runs daily at midnight UTC
+    - cron: '30 6 * * *'  # Runs daily at 12:00 PM IST (06:30 UTC)
 
 jobs:
   update-lessons:
