--- a/.github/workflows/update_lessons.yml
+++ b/.github/workflows/update_lessons.yml
@@ -1,8 +1,8 @@
-name: Update Lessons Daily
+name: Update Lessons Hourly
 
 on:
   schedule:
-    - cron: '30 6 * * *'  # Runs daily at 12:00 PM IST (06:30 UTC)
+    - cron: '0 * * * *'  # Runs every hour, on the hour (UTC time)
 
 jobs:
   update-lessons:
@@ -14,15 +14,15 @@ jobs:
       - name: Update Lessons
         run: |
           echo "# Daily Lessons" > docs/index.md
-          echo "_Updated automatically every day._" >> docs/index.md
+          echo "_Updated automatically every hour._" >> docs/index.md
           echo "" >> docs/index.md
-          echo "## $(date '+%Y-%m-%d')" >> docs/index.md
-          echo "- Today's lesson: Learning Automation with GitHub Actions." >> docs/index.md
+          echo "## $(date '+%Y-%m-%d %H:%M:%S UTC')" >> docs/index.md
+          echo "- Latest update at $(date '+%H:%M UTC')." >> docs/index.md
 
       - name: Commit and Push Changes
         run: |
           git config --global user.name "LessonBot"
           git config --global user.email "noreply@github.com"
           git add docs/index.md
-          git commit -m "Updated lessons for $(date '+%Y-%m-%d')"
+          git commit -m "Updated lesson at $(date '+%H:%M UTC')"
           git push
